--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,10 +1,32 @@
 @import "settings";
 @import "foundation";
 
-h1 {
-    padding-bottom: 10px;
+html, body {
+    height: 100%;
+//    background-color: blue;
 }
 
-.lead a {
-    color: #4d4d4d;
+h1 {
+    padding-bottom: 10px;
+    color: #fff; 
+    font-family: 'Roboto Slab', serif;
+//    font-size: 2em;
+}
+
+#cover {
+    min-height: 100%;
+    background-color: rgb(40, 84, 161);
+    color: #4ccead;
+    font-family: 'Roboto Slab', serif;
+//    margin: 0;
+    min-width: 100%;
+//    font-size: 3em;
+//    font-weight: 300;
+    a {
+        color: #4cceca;
+    }
+}
+
+.second {
+    background-color: green;
 }
