--- a/scss/app.scss
+++ b/scss/app.scss
@@ -18,15 +18,20 @@ h1 {
     background-color: rgb(40, 84, 161);
     color: #4ccead;
     font-family: 'Roboto Slab', serif;
-//    margin: 0;
     min-width: 100%;
 //    font-size: 3em;
-//    font-weight: 300;
+    font-weight: 300;
     a {
         color: #4cceca;
     }
 }
 
 .second {
-    background-color: green;
+    background-color: grey;
+}
+
+#projects {
+    div {
+        border: solid black 1px;       
+    }
 }
