--- a/scss/app.scss
+++ b/scss/app.scss
@@ -10,6 +10,7 @@ h1 {
     padding-bottom: 10px;
     color: #fff; 
     font-family: 'Roboto Slab', serif;
+    font-weight: 400;
 //    font-size: 2em;
 }
 
@@ -20,7 +21,13 @@ h1 {
     font-family: 'Roboto Slab', serif;
     min-width: 100%;
 //    font-size: 200px;
-    font-weight: 300;
+    
+    p {
+//        font-weight: 300;
+        font-size: 2em;
+//        letter-spacing: -0.02em;
+        line-height: 1.10em;
+    }
     a {
         color: #4cceca;
     }
